--- a/index5.html
+++ b/index5.html
@@ -11,9 +11,10 @@
      background: url(img/backg.png)  no-repeat;
      color: #fff;
      background-position: center 0;
-     width: 1215px;
+     width: 100%;
      height: 100%;
      margin: 0 auto;
+     background-size: cover;
     }
 
     </style>
@@ -33,16 +34,16 @@
       <section class="wrapper">
         <div class="small"><div class="cad">Cadastre-se</div></div>
         <div class="big">
-          <a href="https://uk-ua.facebook.com/"><img src="img/face.png" alt="Facebook"></a>
+          <a href="https://uk-ua.facebook.com/"><img class="face" src="img/face.png" alt="Facebook"></a>
           <img src="img/ou.png" alt="ou">
           <form action="#">
-          <input type="text" name="First Name" placeholder="First Name"><br>
-          <input type="text" name="Last Name" placeholder="Last Name"><br>
-          <input type="text" name="Email Address" placeholder="Email Address"><br>
-          <input type="text" name="Choose Password" placeholder="Choose Password"><br>
-          <input type="text" name="Password Confirm" placeholder="Password Confirm"><br>
-          <input type="checkbox" id="Sendme"><div class="text">Send me Youbike updates and tips</div>
-          <input type="submit" value="Create my Account"  id="but">
+          <div><input type="text" name="First Name" placeholder="First Name"></div>
+          <div><input type="text" name="Last Name" placeholder="Last Name"></div>
+          <div><input type="text" name="Email Address" placeholder="Email Address"></div>
+          <div><input type="text" name="Choose Password" placeholder="Choose Password"></div>
+          <div><input type="text" name="Password Confirm" placeholder="Password Confirm"></div>
+          <div><input type="checkbox" id="Sendme"><div class="text">Send me Youbike updates and tips</div></div>
+          <div><input type="submit" value="Create my Account"  id="but"></div>
           <div class="policy">By clicking the button above, you agree to the Terms of Service<br>Xiew our rivacy Policy.</div>
         </div>
       </form>
