--- a/index5.html
+++ b/index5.html
@@ -16,6 +16,18 @@
      margin: 0 auto;
      background-size: cover;
     }
+    .face {
+      margin-bottom: 26px;
+      background: url(img/face.png);
+      display: block;
+      width: 280px;
+      height: 37px;
+      margin: 0 auto;
+
+    }
+    .face:hover {
+      background: url(img/face1.png);
+      }
 
     </style>
 
@@ -34,7 +46,7 @@
       <section class="wrapper">
         <div class="small"><div class="cad">Cadastre-se</div></div>
         <div class="big">
-          <a href="https://uk-ua.facebook.com/"><img class="face" src="img/face.png" alt="Facebook"></a>
+          <a class="face" href="https://uk-ua.facebook.com/"></a>
           <img src="img/ou.png" alt="ou">
           <form action="#">
           <div><input type="text" name="First Name" placeholder="First Name"></div>
