--- a/index5.html
+++ b/index5.html
@@ -12,12 +12,11 @@
      color: #fff;
      background-position: center 0;
      width: 100%;
-     height: 100%;
+     height: 1044px;
      margin: 0 auto;
      background-size: cover;
     }
     .face {
-      margin-bottom: 26px;
       background: url(img/face.png);
       display: block;
       width: 280px;
@@ -27,7 +26,6 @@
     }
     .face:hover {
       background: url(img/face1.png);
-      }
 
     </style>
 
