--- a/index5.html
+++ b/index5.html
@@ -22,11 +22,21 @@
       width: 280px;
       height: 37px;
       margin: 0 auto;
-
     }
     .face:hover {
       background: url(img/face1.png);
+    }
+    @font-face {
+        font-family: 'Helvetica Neue Regular';
+        src: url('fonts/helveticaneue-thin-webfont.eot');
+        src: url('fonts/helveticaneue-thin-webfont.eot?#iefix') format('embedded-opentype'),
+             url('fonts/helveticaneue-thin-webfont.woff2') format('woff2'),
+             url('fonts/helveticaneue-thin-webfont.woff') format('woff'),
+             url('fonts/helveticaneue-thin-webfont.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
 
+    }
     </style>
 
     <body>
